--- a/notebooks/mlruns/7/a688557f2a5b4ab48283feaf2f8b8595/meta.yaml
+++ b/notebooks/mlruns/7/a688557f2a5b4ab48283feaf2f8b8595/meta.yaml
@@ -2,7 +2,7 @@ artifact_uri: file:///home/mila/g/gauthies/Chronic-Liver-Classification/notebook
 end_time: 1601427901151
 entry_point_name: ''
 experiment_id: '7'
-lifecycle_stage: active
+lifecycle_stage: deleted
 name: ''
 run_id: a688557f2a5b4ab48283feaf2f8b8595
 run_uuid: a688557f2a5b4ab48283feaf2f8b8595
