delete unused experiment

--- a/notebooks/mlruns/2/0062f994734b464eab7bd1ae31598e40/meta.yaml
+++ b/notebooks/mlruns/2/0062f994734b464eab7bd1ae31598e40/meta.yaml
@@ -2,7 +2,7 @@ artifact_uri: file:///home/mila/g/gauthies/Chronic-Liver-Classification/notebook
 end_time: 1602642389912
 entry_point_name: ''
 experiment_id: '2'
-lifecycle_stage: active
+lifecycle_stage: deleted
 name: ''
 run_id: 0062f994734b464eab7bd1ae31598e40
 run_uuid: 0062f994734b464eab7bd1ae31598e40
