--- a/notebooks/mlruns/2/11e160467f024c11a453e1f8e37b494d/meta.yaml
+++ b/notebooks/mlruns/2/11e160467f024c11a453e1f8e37b494d/meta.yaml
@@ -2,7 +2,7 @@ artifact_uri: file:///home/mila/g/gauthies/Chronic-Liver-Classification/notebook
 end_time: 1602634406694
 entry_point_name: ''
 experiment_id: '2'
-lifecycle_stage: active
+lifecycle_stage: deleted
 name: ''
 run_id: 11e160467f024c11a453e1f8e37b494d
 run_uuid: 11e160467f024c11a453e1f8e37b494d
