--- a/notebooks/mlruns/2/1af387eb422347bf8165816835902121/meta.yaml
+++ b/notebooks/mlruns/2/1af387eb422347bf8165816835902121/meta.yaml
@@ -2,7 +2,7 @@ artifact_uri: file:///home/mila/g/gauthies/Chronic-Liver-Classification/notebook
 end_time: 1602634442144
 entry_point_name: ''
 experiment_id: '2'
-lifecycle_stage: active
+lifecycle_stage: deleted
 name: ''
 run_id: 1af387eb422347bf8165816835902121
 run_uuid: 1af387eb422347bf8165816835902121
