--- a/notebooks/mlruns/2/243e7052ece8494388ed79ef13be7174/meta.yaml
+++ b/notebooks/mlruns/2/243e7052ece8494388ed79ef13be7174/meta.yaml
@@ -2,7 +2,7 @@ artifact_uri: file:///home/mila/g/gauthies/Chronic-Liver-Classification/notebook
 end_time: 1602637533520
 entry_point_name: ''
 experiment_id: '2'
-lifecycle_stage: active
+lifecycle_stage: deleted
 name: ''
 run_id: 243e7052ece8494388ed79ef13be7174
 run_uuid: 243e7052ece8494388ed79ef13be7174
