--- a/notebooks/mlruns/2/589afd55180747d085d2b339da1c4cc0/meta.yaml
+++ b/notebooks/mlruns/2/589afd55180747d085d2b339da1c4cc0/meta.yaml
@@ -2,7 +2,7 @@ artifact_uri: file:///home/mila/g/gauthies/Chronic-Liver-Classification/notebook
 end_time: 1602656975728
 entry_point_name: ''
 experiment_id: '2'
-lifecycle_stage: active
+lifecycle_stage: deleted
 name: ''
 run_id: 589afd55180747d085d2b339da1c4cc0
 run_uuid: 589afd55180747d085d2b339da1c4cc0
