--- a/notebooks/mlruns/2/84ff63897f954c08a418e75e35058f4f/meta.yaml
+++ b/notebooks/mlruns/2/84ff63897f954c08a418e75e35058f4f/meta.yaml
@@ -2,7 +2,7 @@ artifact_uri: file:///home/mila/g/gauthies/Chronic-Liver-Classification/notebook
 end_time: 1602642391405
 entry_point_name: ''
 experiment_id: '2'
-lifecycle_stage: active
+lifecycle_stage: deleted
 name: ''
 run_id: 84ff63897f954c08a418e75e35058f4f
 run_uuid: 84ff63897f954c08a418e75e35058f4f
