--- a/notebooks/mlruns/2/971cad413c7944d5b866dae29416865b/meta.yaml
+++ b/notebooks/mlruns/2/971cad413c7944d5b866dae29416865b/meta.yaml
@@ -2,7 +2,7 @@ artifact_uri: file:///home/mila/g/gauthies/Chronic-Liver-Classification/notebook
 end_time: 1602644270863
 entry_point_name: ''
 experiment_id: '2'
-lifecycle_stage: active
+lifecycle_stage: deleted
 name: ''
 run_id: 971cad413c7944d5b866dae29416865b
 run_uuid: 971cad413c7944d5b866dae29416865b
