--- a/notebooks/mlruns/2/dc47e2c456d843db8f242722b64a40f6/meta.yaml
+++ b/notebooks/mlruns/2/dc47e2c456d843db8f242722b64a40f6/meta.yaml
@@ -2,7 +2,7 @@ artifact_uri: file:///home/mila/g/gauthies/Chronic-Liver-Classification/notebook
 end_time: 1602643001175
 entry_point_name: ''
 experiment_id: '2'
-lifecycle_stage: active
+lifecycle_stage: deleted
 name: ''
 run_id: dc47e2c456d843db8f242722b64a40f6
 run_uuid: dc47e2c456d843db8f242722b64a40f6
