--- a/notebooks/mlruns/2/45bf9dee224c452d91484458657f5803/meta.yaml
+++ b/notebooks/mlruns/2/45bf9dee224c452d91484458657f5803/meta.yaml
@@ -2,7 +2,7 @@ artifact_uri: file:///home/mila/g/gauthies/Chronic-Liver-Classification/notebook
 end_time: 1602651320893
 entry_point_name: ''
 experiment_id: '2'
-lifecycle_stage: active
+lifecycle_stage: deleted
 name: ''
 run_id: 45bf9dee224c452d91484458657f5803
 run_uuid: 45bf9dee224c452d91484458657f5803
