--- a/notebooks/mlruns/2/5c177e5800ac447ab5901576a57580e9/meta.yaml
+++ b/notebooks/mlruns/2/5c177e5800ac447ab5901576a57580e9/meta.yaml
@@ -2,7 +2,7 @@ artifact_uri: file:///home/mila/g/gauthies/Chronic-Liver-Classification/notebook
 end_time: 1602621225116
 entry_point_name: ''
 experiment_id: '2'
-lifecycle_stage: active
+lifecycle_stage: deleted
 name: ''
 run_id: 5c177e5800ac447ab5901576a57580e9
 run_uuid: 5c177e5800ac447ab5901576a57580e9
