--- a/notebooks/mlruns/2/783adb10af384881808852e3f008055e/meta.yaml
+++ b/notebooks/mlruns/2/783adb10af384881808852e3f008055e/meta.yaml
@@ -2,7 +2,7 @@ artifact_uri: file:///home/mila/g/gauthies/Chronic-Liver-Classification/notebook
 end_time: 1602637534695
 entry_point_name: ''
 experiment_id: '2'
-lifecycle_stage: active
+lifecycle_stage: deleted
 name: ''
 run_id: 783adb10af384881808852e3f008055e
 run_uuid: 783adb10af384881808852e3f008055e
