--- a/notebooks/mlruns/2/82ce924ab4804dc796303984a40d7288/meta.yaml
+++ b/notebooks/mlruns/2/82ce924ab4804dc796303984a40d7288/meta.yaml
@@ -2,7 +2,7 @@ artifact_uri: file:///home/mila/g/gauthies/Chronic-Liver-Classification/notebook
 end_time: 1602656978112
 entry_point_name: ''
 experiment_id: '2'
-lifecycle_stage: active
+lifecycle_stage: deleted
 name: ''
 run_id: 82ce924ab4804dc796303984a40d7288
 run_uuid: 82ce924ab4804dc796303984a40d7288
