--- a/notebooks/mlruns/2/8adbda68fe5f47c7aa5a5f6a3f3fcf58/meta.yaml
+++ b/notebooks/mlruns/2/8adbda68fe5f47c7aa5a5f6a3f3fcf58/meta.yaml
@@ -2,7 +2,7 @@ artifact_uri: file:///home/mila/g/gauthies/Chronic-Liver-Classification/notebook
 end_time: 1602642809903
 entry_point_name: ''
 experiment_id: '2'
-lifecycle_stage: active
+lifecycle_stage: deleted
 name: ''
 run_id: 8adbda68fe5f47c7aa5a5f6a3f3fcf58
 run_uuid: 8adbda68fe5f47c7aa5a5f6a3f3fcf58
