--- a/notebooks/mlruns/2/b69650c6e23b4553aecf98f17d2c37e3/meta.yaml
+++ b/notebooks/mlruns/2/b69650c6e23b4553aecf98f17d2c37e3/meta.yaml
@@ -2,7 +2,7 @@ artifact_uri: file:///home/mila/g/gauthies/Chronic-Liver-Classification/notebook
 end_time: 1602634405701
 entry_point_name: ''
 experiment_id: '2'
-lifecycle_stage: active
+lifecycle_stage: deleted
 name: ''
 run_id: b69650c6e23b4553aecf98f17d2c37e3
 run_uuid: b69650c6e23b4553aecf98f17d2c37e3
