--- a/notebooks/mlruns/2/b814aa308e7f4985a9ad5e7465cf8543/meta.yaml
+++ b/notebooks/mlruns/2/b814aa308e7f4985a9ad5e7465cf8543/meta.yaml
@@ -2,7 +2,7 @@ artifact_uri: file:///home/mila/g/gauthies/Chronic-Liver-Classification/notebook
 end_time: 1602642807703
 entry_point_name: ''
 experiment_id: '2'
-lifecycle_stage: active
+lifecycle_stage: deleted
 name: ''
 run_id: b814aa308e7f4985a9ad5e7465cf8543
 run_uuid: b814aa308e7f4985a9ad5e7465cf8543
