--- a/notebooks/mlruns/2/f0a51af561fa4003886cae80d947d47d/meta.yaml
+++ b/notebooks/mlruns/2/f0a51af561fa4003886cae80d947d47d/meta.yaml
@@ -2,7 +2,7 @@ artifact_uri: file:///home/mila/g/gauthies/Chronic-Liver-Classification/notebook
 end_time: 1602634443079
 entry_point_name: ''
 experiment_id: '2'
-lifecycle_stage: active
+lifecycle_stage: deleted
 name: ''
 run_id: f0a51af561fa4003886cae80d947d47d
 run_uuid: f0a51af561fa4003886cae80d947d47d
