--- a/notebooks/mlruns/2/f6b1360dcaf64510ba0fea9346356c91/meta.yaml
+++ b/notebooks/mlruns/2/f6b1360dcaf64510ba0fea9346356c91/meta.yaml
@@ -2,7 +2,7 @@ artifact_uri: file:///home/mila/g/gauthies/Chronic-Liver-Classification/notebook
 end_time: 1602644272408
 entry_point_name: ''
 experiment_id: '2'
-lifecycle_stage: active
+lifecycle_stage: deleted
 name: ''
 run_id: f6b1360dcaf64510ba0fea9346356c91
 run_uuid: f6b1360dcaf64510ba0fea9346356c91
