--- a/notebooks/mlruns/1/06df3633867148a3bc1f12211e9eed54/meta.yaml
+++ b/notebooks/mlruns/1/06df3633867148a3bc1f12211e9eed54/meta.yaml
@@ -2,7 +2,7 @@ artifact_uri: file:///home/mila/g/gauthies/Chronic-Liver-Classification/notebook
 end_time: 1607890533391
 entry_point_name: ''
 experiment_id: '1'
-lifecycle_stage: active
+lifecycle_stage: deleted
 name: ''
 run_id: 06df3633867148a3bc1f12211e9eed54
 run_uuid: 06df3633867148a3bc1f12211e9eed54
