--- a/notebooks/mlruns/1/0a2b79aea37448d99b45e0081de569fe/meta.yaml
+++ b/notebooks/mlruns/1/0a2b79aea37448d99b45e0081de569fe/meta.yaml
@@ -2,7 +2,7 @@ artifact_uri: file:///home/mila/g/gauthies/Chronic-Liver-Classification/notebook
 end_time: 1607895940151
 entry_point_name: ''
 experiment_id: '1'
-lifecycle_stage: active
+lifecycle_stage: deleted
 name: ''
 run_id: 0a2b79aea37448d99b45e0081de569fe
 run_uuid: 0a2b79aea37448d99b45e0081de569fe
