--- a/notebooks/mlruns/1/30842caf53604765b8251236c6d873ef/meta.yaml
+++ b/notebooks/mlruns/1/30842caf53604765b8251236c6d873ef/meta.yaml
@@ -2,7 +2,7 @@ artifact_uri: file:///home/mila/g/gauthies/Chronic-Liver-Classification/notebook
 end_time: 1607898618000
 entry_point_name: ''
 experiment_id: '1'
-lifecycle_stage: active
+lifecycle_stage: deleted
 name: ''
 run_id: 30842caf53604765b8251236c6d873ef
 run_uuid: 30842caf53604765b8251236c6d873ef
