--- a/notebooks/mlruns/1/a4df53baea464172a1307762251ea8cf/meta.yaml
+++ b/notebooks/mlruns/1/a4df53baea464172a1307762251ea8cf/meta.yaml
@@ -2,7 +2,7 @@ artifact_uri: file:///home/mila/g/gauthies/Chronic-Liver-Classification/notebook
 end_time: 1607895942378
 entry_point_name: ''
 experiment_id: '1'
-lifecycle_stage: active
+lifecycle_stage: deleted
 name: ''
 run_id: a4df53baea464172a1307762251ea8cf
 run_uuid: a4df53baea464172a1307762251ea8cf
