--- a/notebooks/mlruns/1/f1ef11ff38654a12b80a664522177c4c/meta.yaml
+++ b/notebooks/mlruns/1/f1ef11ff38654a12b80a664522177c4c/meta.yaml
@@ -2,7 +2,7 @@ artifact_uri: file:///home/mila/g/gauthies/Chronic-Liver-Classification/notebook
 end_time: 1607888150491
 entry_point_name: ''
 experiment_id: '1'
-lifecycle_stage: active
+lifecycle_stage: deleted
 name: ''
 run_id: f1ef11ff38654a12b80a664522177c4c
 run_uuid: f1ef11ff38654a12b80a664522177c4c
