--- a/notebooks/mlruns/1/fbec54d3a35942bcb417c62d87545678/meta.yaml
+++ b/notebooks/mlruns/1/fbec54d3a35942bcb417c62d87545678/meta.yaml
@@ -2,7 +2,7 @@ artifact_uri: file:///home/mila/g/gauthies/Chronic-Liver-Classification/notebook
 end_time: 1607890535696
 entry_point_name: ''
 experiment_id: '1'
-lifecycle_stage: active
+lifecycle_stage: deleted
 name: ''
 run_id: fbec54d3a35942bcb417c62d87545678
 run_uuid: fbec54d3a35942bcb417c62d87545678
