--- a/notebooks/mlruns/1/0e714550c35f4c10ac0e5c0d850a6eae/meta.yaml
+++ b/notebooks/mlruns/1/0e714550c35f4c10ac0e5c0d850a6eae/meta.yaml
@@ -2,7 +2,7 @@ artifact_uri: file:///home/mila/g/gauthies/Chronic-Liver-Classification/notebook
 end_time: 1607892791321
 entry_point_name: ''
 experiment_id: '1'
-lifecycle_stage: active
+lifecycle_stage: deleted
 name: ''
 run_id: 0e714550c35f4c10ac0e5c0d850a6eae
 run_uuid: 0e714550c35f4c10ac0e5c0d850a6eae
