--- a/.gitignore
+++ b/.gitignore
@@ -82,6 +82,9 @@ target/
 # Jupyter Notebook
 .ipynb_checkpoints
 
+# intelliJ generated folder
+.idea
+
 # IPython
 profile_default/
 ipython_config.py
@@ -114,6 +117,9 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+
+#visual code
+.vscode
 
 # Spyder project settings
 .spyderproject
