Changed structure project ( follow cookiecutter) and created baseline 1 in pytorch instead of fastai

--- a/environment.yml
+++ b/environment.yml
@@ -10,10 +10,11 @@ dependencies:
 - nb_conda_kernels
 - scikit-learn
 - matplotlib
+- jupyterlab
 - pandas
 - fastai
 - mlflow
-- pip
+- pipy
 - tqdm
 - pytorch>=1.6
 - torchvision
