--- a/conf/parameters.yml
+++ b/conf/parameters.yml
@@ -10,7 +10,9 @@ model:
   momentum: 0.9
   step_size: 7
   gamma: 0.1
-  batch_size: 64
+  batch_size: 32
+  pretrained: True
+  train_pct: 0.9
 
 cross_val:
   seed: 11
